Closed Bug 378935 Opened 17 years ago Closed 14 years ago

[BC]border-collapse column borders not repainted correctly where no cells present

Categories

(Core :: Layout: Tables, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: dbaron, Assigned: bernd_mozilla)

References

Details

(Keywords: testcase)

Attachments

(2 files)

Attached file tetscase
A border-collapse border on a column is not repainted correctly where there are no cells on either side of the column.

In the testcase, every cell has the contents "X", but rows have different numbers of cells.  There is a border-collapsed border on the columns.

Steps to reproduce:
 1. load attached testcase
 2. scroll slowly down to the table
 3. switch away from the window and back to it

Expected results: A complete border around all three columns after steps (2) and (3).

Actual results: After step (2), the border between the second and third column does not appear in the area around the bottom row (because it isn't painted in the partial repaints).  But it appears in the complete repaint caused by step (3).
See also bug 378933 and bug 378937 on similar testcases.
thats not entirely new: bug 190593 
Keywords: testcase
Summary: border-collapse column borders not repainted correctly where no cells present → [BC]border-collapse column borders not repainted correctly where no cells present
Attached patch patchSplinter Review
bc code relies on having multiple dead cell data entries in a row.
Assignee: nobody → bernd_mozilla
Status: NEW → ASSIGNED
Attachment #428787 - Flags: review?(bzbarsky)
Blocks: 407618
Blocks: 378933
Blocks: 378937
Blocks: 190593
Comment on attachment 428787 [details] [diff] [review]
patch

> +    //bc code relies on having multiple dead cell data entries in a row

Space before "bc", please.  And period at the end?

r=bzbarsky with that.
Attachment #428787 - Flags: review?(bzbarsky) → review+
http://hg.mozilla.org/mozilla-central/rev/db38e530c170
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: