bug 378935 the border collapse code relies on having mutliple dead cell data entries in a row r=bzbarsky